2010-07-28  Ramon Novoa  <rnovoa@artica.es>

	* include/fgraph.php: Async modules are not compressed. Fixed charts
	  for these modules.

2010-07-28  Miguel de Dios  <miguel.dedios@artica.es>
	* install.php: fixed unclose bold tag.

2010-07-28  Miguel de Dios  <miguel.dedios@artica.es>
	* godmode/reporting/visual_console_builder.data.php: fixed the select box
	field for to don't show None value for map background.

2010-07-27  Miguel de Dios  <miguel.dedios@artica.es>
	* include/functions_reporting.php: added new parameters in the function
	"get_agentmodule_sla", the parameters days of week to search and range of
	time. And use new parameteres in the call for SLA data in function
	"render_report_html_item".
	
	* pandoradb.sql, extras/pandoradb_migrate_v3.1_to_v3.2.sql: in table
	"treport_content" added the fields for set days of week and range time
	for SLA.
	
	* operation/reporting/reporting_xml.php: use new parameters in the call for
	SLA data.

	* godmode/reporting/reporting_builder.php: added source code for save,
	update new fields (days of week and time range).
	
	* godmode/reporting/reporting_builder.item_editor.php: added source code to
	show the fields (days of week and time range).
	
	Pending task: #3033457

2010-07-27  Miguel de Dios  <miguel.dedios@artica.es>
	* operation/agentes/exportdata.php: fixed the date into export, before it
	was 12 hour format, now it is 24 hour format.
	Fixes: #3033541

2010-07-26  Raúl Mateos   <raulofpandora@gmail.com>

	* godmode/users/user_list.php: Added px to width to ease the change of
	profile edition to this page.

2010-07-26  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php: Changed the priority of the
	status of agents and groups when get status from their 
	descendents

2010-07-26  Miguel de Dios  <miguel.dedios@artica.es>
	* include/functions_db.php: added into the function "get_group_icon" the
	return icon for "all" group.
	